java/java-tests/testData/inspection/api_usage/use17api_on_16/LanguageLevel16.java

class Main {
  {
    String.class.isRecord();
    <error descr="Usage of API documented as @since 17+">String.class.isSealed</error>();
  }
}